# caj2pdf

./: .gitignore  Dockerfile  Dockerfile.alpine  GUI.py  HNParsePage.py  JBigDecode.cc  JBigDecode.h  LICENSE  README.md  caj2pdf  caj2pdf.py  cajparser.py  decode_jbig2data.cc  decode_jbig2data_x.cc  jbig2dec.py  jbigdec.cc  jbigdec.py  parser.py  pdfwutils.py  pyproject.toml  requirements.txt  utils.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_cn.md
cajparser/: __init__.py  cajparser.py  cli.py  utils.py
lib/: decode_jbig2data.cc
tests/: test_cajparser.py
